--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 chrono = { version = "0.4.38", features = ["now"] }
 clap = { version = "4.5.8", features = ["derive"] }
 git2 = "0.19.0"
+regex = "1.10.5"
