--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
-[package]
-name = "great"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-chrono = { version = "0.4.38", features = ["now"] }
-clap = { version = "4.5.8", features = ["derive"] }
-git2 = "0.19.0"
-regex = "1.10.5"
+[workspace]
+members = [
+    "app/cli",
+    "lib",
+]
